--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>
             La sexta luna, la sexta estrofa, el sexto mes, lo quiero dedicar a
             darte las gracias, por este amor que me das y por el hombre que me
-            permites ser. Gracias por estos 6 meses mi vida.
+            permites ser. Gracias por estos 6 meses mi vida. Te amito.
           </p>
         </div>
 
