--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="firma">
-          Con amor Tu Corazón de Melón
+          Con amor, Tu Corazón de Melón
           <svg
             class="firma-corazon"
             width="25"
